--- a/css/main.css
+++ b/css/main.css
@@ -72,14 +72,17 @@ nav .profile-link a{
 .home-main{
     display:grid;
     grid-template-columns: 1fr 4fr 1fr;
-    height: 100px;
-
+    height: 100%;
+    background-image: url('../assets/img/Cover.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .home-main section{
     display:grid;
     grid-column:2 ;
     justify-items: center;
-    height: 350px;
+    height: 100px;
     margin-top:80px;
 }
 .home-main-text{
