--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap');
 body{
     margin:0 ;
     padding:0 ;
@@ -61,7 +62,7 @@ nav .nav-logo-container img{
 nav .profile-link{
     display:flex;
     align-items: center;
-    justify-content: left;
+    justify-content: flex-end;
     margin-right: 50px;
 }
 nav .profile-link a{
@@ -86,9 +87,11 @@ nav .profile-link a{
     margin-top:80px;
 }
 .home-main-text{
+    font-family: 'Roboto Mono', monospace;
     font-size: 30px;
     font-weight: 700px;
     letter-spacing: 10px;
     color:black;
     text-align: center;
 }
+
