--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body{
     bottom:0;
     left:0;
     right: 0;
-
+    font-family: 'Roboto Mono', monospace;
 }
 a{
     text-decoration: none;
@@ -68,6 +68,7 @@ nav .profile-link{
 nav .profile-link a{
     color :black;
     border-bottom: 1px solid black;
+  
 }
 
 .home-main{
@@ -93,5 +94,19 @@ nav .profile-link a{
     letter-spacing: 10px;
     color:black;
     text-align: center;
+    color : white;
 }
 
+.home-main-button{
+    width:110px;
+    height: 50px;
+    background:#48cfad;
+    display:grid;
+    align-items: center;
+    border: none;
+}
+.home-main-button a{
+    font-weight: 700;
+    font-size: 18px;
+    
+}
