--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,15 @@
 body{
     margin:0 ;
     padding:0 ;
+   
+    font-family: 'Roboto Mono', monospace;
+}
+.home-body{
     position: fixed;
     top:0%;
     bottom:0;
     left:0;
     right: 0;
-    font-family: 'Roboto Mono', monospace;
 }
 a{
     text-decoration: none;
@@ -127,6 +130,7 @@ nav .profile-link a{
     grid-column: 1;
 }
 .blogs-news-img-container img{
+    width: 85%;
 
 }
 .blog-news-info-container{
@@ -134,4 +138,13 @@ nav .profile-link a{
 }
 .blogs-news-info-container p{
     margin-bottom: 35px;
+}
+.blogs-posts-container{
+    padding: 0 50px 40px;
+}
+
+.blogs-posts-container h3{
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+    text-align:center;
 }
