--- a/css/main.css
+++ b/css/main.css
@@ -184,3 +184,25 @@ footer p{
     max-width: 980px;
     margin:auto;
 }
+
+.blogpost-img-container{
+    padding:0px 50px 40px;
+    
+}
+
+.blogpost-img-container img{
+    width: 100%;
+    
+}
+
+.blogpost-main-container{
+    padding:0px 50px 40px;
+}
+.blogpost-main-container h3{
+    border-bottom:1px solid #cdd2da;
+    margin-bottom: 20px;
+}
+
+.blogpost-main-container article h1{
+ font-size:35px;
+}
